--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
         "tailwindcss": "^3.3.6"
     },
     "dependencies": {
-        "@tailwindcss/line-clamp": "^0.4.4"
+        "@tailwindcss/line-clamp": "^0.4.4",
+        "i18next": "^23.7.8",
+        "i18next-xhr-backend": "^3.2.2"
     },
     "name": "visavis-ventures",
     "version": "1.0.0",
     "main": "tailwind.config.js",
     "scripts": {
-        "dev": "npx tailwindcss -i ./src/assets/css/input.css -o ./dist/output.css --watch"
+        "dev": "npx tailwindcss -i ./dist/input.css -o ./src/assets/css/style.css --watch"
     },
     "author": "",
     "license": "ISC",
